crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-4.stderr
TOML parse error at line 1, column 32
  |
1 | bad-uni-esc-ml-4 = """val\U0000"""
  |                                ^
too few unicode value digits, expected unicode hexadecimal value
